--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.1",
   "description": "Font resources for harp.gl",
   "scripts": {
-    "build": "tsc",
-    "test": "cross-env mocha --require source-map-support/register $EXTRA_MOCHA_ARGS ./test/*.js",
-    "prepare": "cross-env tsc --sourceMap false $EXTRA_TSC_ARGS",
+    "test": "cross-env ts-mocha $EXTRA_MOCHA_ARGS ./test/*.ts",
     "prepack": "node ./scripts/create-font-catalog.js -n Default -f ../resources-dev/DefaultFonts.json"
   },
   "repository": {
@@ -22,18 +20,18 @@
   "license": "Apache-2.0",
   "dependencies": {},
   "devDependencies": {
-    "@types/chai": "^4.1.2",
+    "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.0",
+    "@types/node": "^10.12.12",
     "chai": "^4.0.2",
     "cross-env": "^5.2.0",
     "fontkit": "^1.7.7",
     "mkpath": "^1.0.0",
     "mocha": "^5.2.0",
     "msdf-bmfont-xml": "^2.3.5",
-    "source-map-support": "^0.5.2",
+    "ts-mocha": "^2.0.0",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.3",
+    "typescript": "^3.2.1",
     "unicode-range-json": "^1.0.1"
   }
 }
