--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chai": "^4.0.2",
     "cross-env": "^5.2.0",
     "fontkit": "^1.7.7",
+    "minimist": "^1.2.0",
     "mkpath": "^1.0.0",
     "mocha": "^5.2.0",
     "msdf-bmfont-xml": "^2.3.5",
