--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git://github.com:heremaps/harp-font-resources.git"
   },
   "author": {
-    "name": "HERE Global B.V. and its affiliate(s)",
+    "name": "HERE Europe B.V.",
     "url": "https://here.com"
   },
   "publishConfig": {
