--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "license": "Apache-2.0",
+  "license": "(Apache-2.0 AND (Apache-2.0 OR OFL-1.1 OR GPL-2.0-only WITH Font exception 2.0))", 
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
