--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.1",
   "description": "Font resources for harp.gl",
   "scripts": {
-    "test": "cross-env ts-mocha $EXTRA_MOCHA_ARGS ./test/*.ts",
+    "test": "ts-node ./scripts/create-font-catalog.ts -i ./resources-dev/TestFonts.json -o ./test/resources && cross-env ts-mocha $EXTRA_MOCHA_ARGS ./test/*.ts",
+    "create-font-catalog": "ts-node ./scripts/create-font-catalog.ts",
     "prepack": "ts-node ./scripts/create-font-catalog.ts -i ./resources-dev/DefaultFonts.json -o ./resources"
   },
   "repository": {
@@ -17,7 +18,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "license": "(Apache-2.0 AND (Apache-2.0 OR OFL-1.1 OR GPL-2.0-only WITH Font exception 2.0))", 
+  "license": "(Apache-2.0 AND (Apache-2.0 OR OFL-1.1 OR GPL-2.0-only WITH Font exception 2.0))",
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
