--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "access": "public"
   },
   "license": "(Apache-2.0 AND (Apache-2.0 OR OFL-1.1 OR GPL-2.0-only WITH Font-exception-2.0))",
-  "dependencies": {},
+  "engines": {
+    "node": "^10.15.3"
+  },
   "devDependencies": {
     "@types/chai": "^4.1.7",
     "@types/mocha": "^5.2.5",
