--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@here/harp-font-resources",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "Font resources for harp.gl",
   "scripts": {
     "test": "ts-node ./scripts/create-font-catalog.ts -i ./resources-dev/TestFonts.json -o ./test/resources && cross-env ts-mocha $EXTRA_MOCHA_ARGS ./test/*.ts",
@@ -20,7 +20,9 @@
   },
   "license": "(Apache-2.0 AND (Apache-2.0 OR OFL-1.1 OR GPL-2.0-only WITH Font-exception-2.0))",
   "engines": {
-    "node": "^10.15.3"
+    "node": ">=9.11.1",
+    "npm": ">=5.8.0",
+    "yarn": ">=1.11.1"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
